# stocks

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml  refresh.py  requirements.txt  test_refresh.py
data/input/: example.csv
scripts/: beta_vs_performance_scatter.py  last_year.py  monthly_relative_perf.py  portfolio_performance_chart.py  portfolio_summary.py  treemap.py  upside_downside.py
