[project]
name = "stocks"
version = "0.1.0"
description = "Python program to monitor stocks across accounts with local cache"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "pytest>=8.4.1",
    "requests-ratelimiter>=0.7.0",
    "squarify>=0.4.4",
    "yfinance-cache>=0.7.13",
]
